{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 1889,
  "lineage": "91a412b0-2317-85ca-c946-16fdba678064",
  "resources": [
    {
      "module": "module.ecs_task",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:732757519306:subnet/subnet-0dfd4168",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0dfd4168",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "732757519306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-915a83f4"
          },
          "dependencies": [
            "module.lambda.aws_apigatewayv2_api.lambda",
            "module.lambda.aws_apigatewayv2_integration.delay_lambda",
            "module.lambda.aws_apigatewayv2_route.delay",
            "module.lambda.aws_apigatewayv2_stage.lambda",
            "module.lambda.aws_iam_role.lambda_exec",
            "module.lambda.aws_iam_role_policy_attachment.lambda_policy",
            "module.lambda.aws_lambda_function.delay_lambda",
            "module.lambda.aws_lambda_permission.api_gw",
            "module.lambda.aws_s3_bucket.lambda_bucket",
            "module.lambda.aws_s3_object.delay_lambda",
            "module.lambda.data.archive_file.delay_lambda",
            "module.lambda.random_pet.lambda_bucket_name"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_task",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:732757519306:subnet/subnet-7a18c20d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-7a18c20d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "732757519306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-915a83f4"
          },
          "dependencies": [
            "module.lambda.aws_apigatewayv2_api.lambda",
            "module.lambda.aws_apigatewayv2_integration.delay_lambda",
            "module.lambda.aws_apigatewayv2_route.delay",
            "module.lambda.aws_apigatewayv2_stage.lambda",
            "module.lambda.aws_iam_role.lambda_exec",
            "module.lambda.aws_iam_role_policy_attachment.lambda_policy",
            "module.lambda.aws_lambda_function.delay_lambda",
            "module.lambda.aws_lambda_permission.api_gw",
            "module.lambda.aws_s3_bucket.lambda_bucket",
            "module.lambda.aws_s3_object.delay_lambda",
            "module.lambda.data.archive_file.delay_lambda",
            "module.lambda.random_pet.lambda_bucket_name"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_task",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:732757519306:subnet/subnet-e180d8a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-e180d8a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "732757519306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-915a83f4"
          },
          "dependencies": [
            "module.lambda.aws_apigatewayv2_api.lambda",
            "module.lambda.aws_apigatewayv2_integration.delay_lambda",
            "module.lambda.aws_apigatewayv2_route.delay",
            "module.lambda.aws_apigatewayv2_stage.lambda",
            "module.lambda.aws_iam_role.lambda_exec",
            "module.lambda.aws_iam_role_policy_attachment.lambda_policy",
            "module.lambda.aws_lambda_function.delay_lambda",
            "module.lambda.aws_lambda_permission.api_gw",
            "module.lambda.aws_s3_bucket.lambda_bucket",
            "module.lambda.aws_s3_object.delay_lambda",
            "module.lambda.data.archive_file.delay_lambda",
            "module.lambda.random_pet.lambda_bucket_name"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_task",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:732757519306:vpc/vpc-915a83f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-353d9250",
            "default_route_table_id": "rtb-453c9520",
            "default_security_group_id": "sg-d6d04bb3",
            "dhcp_options_id": "dopt-4ae6062f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-915a83f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-453c9520",
            "owner_id": "732757519306"
          },
          "dependencies": [
            "module.lambda.aws_apigatewayv2_api.lambda",
            "module.lambda.aws_apigatewayv2_integration.delay_lambda",
            "module.lambda.aws_apigatewayv2_route.delay",
            "module.lambda.aws_apigatewayv2_stage.lambda",
            "module.lambda.aws_iam_role.lambda_exec",
            "module.lambda.aws_iam_role_policy_attachment.lambda_policy",
            "module.lambda.aws_lambda_function.delay_lambda",
            "module.lambda.aws_lambda_permission.api_gw",
            "module.lambda.aws_s3_bucket.lambda_bucket",
            "module.lambda.aws_s3_object.delay_lambda",
            "module.lambda.data.archive_file.delay_lambda",
            "module.lambda.random_pet.lambda_bucket_name"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_task",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:732757519306:targetgroup/webflux-target-group/e58011bbb0c54f06",
            "arn_suffix": "targetgroup/webflux-target-group/e58011bbb0c54f06",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:732757519306:targetgroup/webflux-target-group/e58011bbb0c54f06",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webflux-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-915a83f4"
          },
          "dependencies": [
            "module.ecs_task.aws_default_vpc.default_vpc",
            "module.lambda.aws_apigatewayv2_api.lambda",
            "module.lambda.aws_apigatewayv2_integration.delay_lambda",
            "module.lambda.aws_apigatewayv2_route.delay",
            "module.lambda.aws_apigatewayv2_stage.lambda",
            "module.lambda.aws_iam_role.lambda_exec",
            "module.lambda.aws_iam_role_policy_attachment.lambda_policy",
            "module.lambda.aws_lambda_function.delay_lambda",
            "module.lambda.aws_lambda_permission.api_gw",
            "module.lambda.aws_s3_bucket.lambda_bucket",
            "module.lambda.aws_s3_object.delay_lambda",
            "module.lambda.data.archive_file.delay_lambda",
            "module.lambda.random_pet.lambda_bucket_name"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_task",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:732757519306:security-group/sg-00577937ff3d68e3d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00577937ff3d68e3d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231005001618471200000002",
            "name_prefix": "terraform-",
            "owner_id": "732757519306",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-915a83f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lambda.aws_apigatewayv2_api.lambda",
            "module.lambda.aws_apigatewayv2_integration.delay_lambda",
            "module.lambda.aws_apigatewayv2_route.delay",
            "module.lambda.aws_apigatewayv2_stage.lambda",
            "module.lambda.aws_iam_role.lambda_exec",
            "module.lambda.aws_iam_role_policy_attachment.lambda_policy",
            "module.lambda.aws_lambda_function.delay_lambda",
            "module.lambda.aws_lambda_permission.api_gw",
            "module.lambda.aws_s3_bucket.lambda_bucket",
            "module.lambda.aws_s3_object.delay_lambda",
            "module.lambda.data.archive_file.delay_lambda",
            "module.lambda.random_pet.lambda_bucket_name"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_task",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:732757519306:security-group/sg-091159c20e653c0d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091159c20e653c0d9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-00577937ff3d68e3d"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20231005001621090500000006",
            "name_prefix": "terraform-",
            "owner_id": "732757519306",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-915a83f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_task.aws_security_group.load_balancer_security_group",
            "module.lambda.aws_apigatewayv2_api.lambda",
            "module.lambda.aws_apigatewayv2_integration.delay_lambda",
            "module.lambda.aws_apigatewayv2_route.delay",
            "module.lambda.aws_apigatewayv2_stage.lambda",
            "module.lambda.aws_iam_role.lambda_exec",
            "module.lambda.aws_iam_role_policy_attachment.lambda_policy",
            "module.lambda.aws_lambda_function.delay_lambda",
            "module.lambda.aws_lambda_permission.api_gw",
            "module.lambda.aws_s3_bucket.lambda_bucket",
            "module.lambda.aws_s3_object.delay_lambda",
            "module.lambda.data.archive_file.delay_lambda",
            "module.lambda.random_pet.lambda_bucket_name"
          ]
        }
      ]
    }
  ]
}